package com.lvl6.proto;

option java_outer_classname = "InfoProto";

message UnitStatsProto {
	optional int32 strength = 1;
	optional int32 defense = 2;
	optional int32 resistance = 3;
	optional int32 moveSpeed = 4;
	optional int32 attackSpeed = 5;
	optional int32 maxMana = 6;
	optional int32 maxHealth = 7;
}

//Info for each individual building
message FullUserStructProto {
	optional int32 userStructId = 1;
	optional int32 userId = 2;
	optional int32 structId = 3;
	optional int64 lastCollectTime = 4; //Only needed if the building generates income
	optional CoordinateProto coordinates = 5;
	optional int32 level = 6;
	optional int64 purchaseTime = 7;
	optional int64 lastUpgradeTime = 8;
	optional bool isComplete = 9;
	optional FullStructProto fullStruct = 10;
}

//Readonly info regarding building types
message FullStructProto { 
	optional int32 structId = 1;
	optional string name = 2;
	optional int32 income = 3; //Only if the building generates income
	optional int32 storage = 4; //Only if the building stores resources
	optional int32 minutesToBuild = 5;
	optional int32 minutesToUpgradeBase = 6;
	optional int32 price = 7;

	//value of minLevel[i] is the level required to make i of this building
	repeated int32 minLevel = 8; 

	optional int32 xLength = 10;
	optional int32 yLength = 11;

	optional StructType structType = 12;

	optional ResourceType upgradeResource = 13;
}

message CoordinateProto{ 
	optional int32 x = 1;
	optional int32 y = 2;
}

message MinimumUserProto {
	optional int32 userId = 1;
	optional string name = 2;
	optional PlayerClass userClass = 3;
}

message MinimumUserProtoWithLevel {
	optional MinimumUserProto minUserProto = 1;
	optional int32 level = 2;
}

message FullUserProto {
	optional int32 userId = 1;
	optional string name = 2;
	optional int32 level = 3;
	optional PlayerClass class = 4;

	optional UnitStatsProto stats = 5;
	optional int64 lastHealthRefillTime = 6;
	optional int64 lastManaRefillTime = 7;

	optional int32 gold = 8;
	optional int32 tonic = 9;
	optional int32 gems = 10;

	optional int32 experience = 11;
	optional int32 tasksCompleted = 12;
	optional int32 battlesWon = 13;
	optional int32 battlesLost = 14;

	optional string referralCode = 15;
	optional int32 numReferrals = 16;
	//optional LocationProto location = 17;

	optional int64 lastLoginTime = 18;
	optional int64 lastLogoutTime = 19;

	optional bool isFake = 20;
	optional bool isAdmin = 21;
}

message AbilityProto {
	optional int32 abilityID = 1;
	optional string name = 2;

	optional int32 manaCost = 3;
	optional int32 castTime = 4;
	optional int32 coolDown = 5;
	optional AbilityType abilityType = 6;

	optional int32 power = 7;
	optional bool persist = 8;
	optional int32 lifetime = 9;
	optional int32 speed = 10;
	optional float retarget = 11;
	optional float size = 12;

	optional int32 shots = 13;
	optional int32 arc = 14;

	enum AbilityType {
		ATTACK = 0;
		BUFF = 1;
		ARC_ATTACK = 2;
	}
}

message UnitProto {
	optional int32 unitID = 1;
	optional UnitStatsProto stats = 2;
	optional EquipmentProto weapon = 3;
	optional EquipmentProto armor = 4;
	optional EquipmentProto amulet = 5;
	optional string name = 6;
	optional ColorProto color = 7;
	optional int32 mass = 8;
	optional float size = 9;
	optional bool enemy = 10;
	optional LogicSet logic = 11;
	optional bool ranged = 12;
	repeated int32 abilityIDs = 13;


	enum LogicSet {
		CHASE = 0;
	}

	//TODO: Add model information
}

message UnitSpawnerProto {
	optional int32 spawnerID = 1;
	repeated UnitProto units = 2;
	optional CoordinateProto coordinates = 3;
}

message MissionProto {
	repeated int32 spawnerIDs = 1;
	optional CoordinateProto playerPos = 2;
	optional MissionGoal goal = 3;
	optional int32 length = 4; //Time for Survival, # of waves for elimination

	enum MissionGoal{
		ELIMINATE = 0;
		SURVIVE = 1;
		BOSS = 2;
	}
}

message EquipmentProto {
	optional string name = 1;
	optional EquipmentSlot slot = 2;
	optional EquipmentClass class = 3;
	optional UnitStatsProto stats = 4;

	enum EquipmentSlot {
		WEAPON = 0;
		ARMOR = 1;
		AMULET = 2;
	}

	//Keep physical and magic there in case we add
	//more classes that follow that dichotomy
	enum EquipmentClass { 
		PHYSICAL = 0;
		MAGICAL = 1;
		WARRIOR = 2;
		ARCHER = 3;
		MAGE = 4;
		ALL = 5;
	}
}

message ColorProto {
	optional int32 red = 1;
	optional int32 green = 2;
	optional int32 blue = 3;
}

enum ResourceType {
	GOLD = 0;
	TONIC = 1;
	GEMS = 2;
}

enum StructType {
	TOWN_HALL = 0;
	GOLD_COLLECTOR = 1;
	GOLD_STORAGE = 2;
	TONIC_COLLECTOR = 3;
	TONIC_STORAGE = 4;
	BLACKSMITH = 5;
	WIZARD = 6;
}

enum PlayerClass {
	WARRIOR = 0;
	ARCHER = 1;
	MAGE = 2;
}