
package com.lvl6.aoc2.proto;

option java_outer_classname = "MonsterEnum";

//Example placeholder values until we have
//action assets
enum MonsterType {
	ROCK_KING = 1;
	SKELETON = 2;
}